// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components CounterValue basic 1`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 bJwMKx"
  color="#66be54"
>
  + USD 10.00
</div>
`;

exports[`components CounterValue specifying ticker different from default 1`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 bJwMKx"
  color="#66be54"
>
  + USD 5.00
</div>
`;

exports[`components CounterValue using countervalue different from default 1`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 huzgmt"
  color={undefined}
>
  + EUR 0.42
</div>
`;

exports[`components CounterValue with time travel whith date in countervalues 1`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 bJwMKx"
  color="#66be54"
>
  + USD 20.00
</div>
`;

exports[`components CounterValue with time travel whith date not in countervalues 1`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 bJwMKx"
  color="#66be54"
>
  + USD 0.00
</div>
`;

exports[`components CounterValue without countervalues populated 1`] = `
<div
  className="k45ou1-0 iqaJGf e345n3-0 bJwMKx"
  color="#66be54"
>
  + USD 0.00
</div>
`;
